fixed z-index again and padding on h2

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ nav {
   display: flex;
   align-items: center;
   min-height: 8vh;
+  z-index: 1;
 }
 
 .logo {
@@ -572,6 +573,9 @@ footer {
     padding: 5em 10em 5em 10em;
     font-size: 130%;
     line-height: 2.0;
+  }
+  h2 {
+    padding-top: 4.5em;
   }
 }
 
